static/css/viewer.css
* {
    padding: 0;
    margin: 0;
    font: Helvetica;
}

html, body {
    height: 100%;
    width: 100%;
}

body {
    background-color: white;
	overflow: hidden;
}

#outerContainer {
    width: 100%;
    height: 100%;
}

#mainContainer {
    position: absolute;
    inset: 0;
    overflow: auto;
}

/* Sidebar */
#sidebar {
    position: absolute;
    inset: 32px 0 0;
    height: 100%;
    width: 400px;
    z-index: 100;
    background-color: #ECEFF4;
}

#sidebarToolbar {
    position: absolute;
    height: 32px;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: #D8DEE9;
}

#sidebarViews {
	position: absolute;
	inset: 32px 0 0 0;
	overflow: auto;
    display: flex; /* Use flexbox */
    justify-content: center; /* Center horizontally */
}

/* Toolbar */
#toolbar {
    position: absolute;
    height: 32px;
    width: 100%;
    z-index: 999;
    background-color: #ECEFF4;
}

#toolbarSections {
    position: absolute;
    height: 32px;
    width: 100%;
    padding: auto 4px;
    display: flex;
    justify-content: space-between;
}

.toolbarSection {
    display: flex;
    flex-direction: row;
}

/* Viewer */
#viewer {
	position: absolute;
	inset: 32px 0 0 250px;
	overflow: auto;
    display: flex; /* Use flexbox */
    justify-content: center; /* Center horizontally */
	background: #6c757d;
}
#container
{
	position: relative;
	display: flex; /* Use flexbox */
    justify-content: center; /* Center horizontally */
	margin: auto;
}
#canvasContainer {
	position: absolute;
	margin: auto;
	width: 100%;
	height: 100%;
}

/* textLayer */
#textLayerContainer {
	position: absolute;
	margin: auto;
	width: 100%;
	height: 100%;
}

/* Buttons, Fields, Labels, Selects */
.toolbarButton {
	height: 28px;
	width: 28px;
	font-size: 12px;
	margin: 2px;
}

.toolbarField {
	height: 28px;
	width: 32px;
	text-align: center;
	font-size: 16px;
	padding: 4px 7px;
	margin: 2px;
}

.toolbarLabel {
	display: flex;
	align-items: center;
	margin: 2px;
	font-size: 16px;
	user-select: none;
}

.toolbarSelect {
	height: 28px;
	font-size: 16px;
	margin: 2px;
}

#documentTitle {
    text-align: center;
    font-size: 16px;
}

#fileName {
    text-align: center;
    font-size: 10px;
}

#markButton {
	margin: auto;
	z-index: 3; /*needs to be higher z index so that it is easy to click*/
}

/*Thumbnails view*/
.thumbnailContainer {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 10px;
	width: 270px;
	background-color: transparent;
}

.pageNumberElement {
	font-size: 14px;
	color: #333;
	padding-bottom: 15px;
	padding-top: 5px;
}

.thumbnailContainer .thumbnailCanvas {
	max-width: 100%;
	height: auto;
	border: 1px solid transparent;
}

.thumbnailContainer[aria-selected="true"] .thumbnailCanvas {
	max-width: 100%;
	height: auto;
	border: 5px solid #ACCEF7;
}

/* Outline view */
#outlineView div {
  background-color: transparent;
}

#outlineView span {
	display: block;
	padding: 10px;
	background-color: transparent;
	cursor: pointer;
}

#outlineView span:hover {
  background-color: #f5f5f5;
}

.toggleContainer {
	text-align: center;
	margin-top: 50px;
}
.toggle-button{
	padding: 10px 20px;
	background-color: #fff;
	color: #000;
	border: none;
	cursor: pointer;
	border-radius: 5px;
	transition: all 0.3s ease;
}

.input-box{
	padding: 10px 20px;
	background-color: #fff;
	color: #000;
	border: none;
	cursor: pointer;
	border-radius: 5px;
	transition: all 0.3s ease;

}
.toggle-button {
	display: inline-block;
}
.input-box {
	display: none;
}

:root {
	--secondary-color: #422C73;
}

/* Right sidebar */
#rightSidebar {
    position: fixed;
    top: 200px; /* Adjust as needed */
    right: 0;
    width: auto; /* Adjust width as needed */
    height: auto;
    background-color: #25D831;
    z-index: 100;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
	border-radius: 30px
}

#rightSidebar a {
    font-size: 20px;
    color: #fff;
    text-decoration: none;
    padding: 20px;
    text-align: center;
}

.offcanvas {
	padding: 10px;
    width: auto;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.input-box{
	width: auto;
	height: auto;
}

.commentsContainer{
	width: auto;
	height: auto;
	padding : 10px;
    margin-bottom: 10px;
    margin-top: 10px;

}

.text-comment {
    max-width: 200px;
    margin: auto;
}

.card {
    width: 100%;
    margin: auto;
}

.card-img-top {
    max-width: 10%;
    height: auto;
}

.card-body {
    padding: 5px; /* Add padding to the card-body */
}

textarea {
    width: calc(100% - 10px); /* Adjusted width considering padding */
    height: 100px;
    padding: 5px; /* Padding to match card-body padding */
    resize: both;
    overflow: auto;
    box-sizing: border-box; /* Include padding and border in the width */
}

.card-footer {
    display: flex;
    justify-content: flex-end;
}

textarea {
  margin-top: 10px;
  width: calc(100% - 10px);
  height: 100px;
  -moz-border-bottom-colors: none;
  -moz-border-left-colors: none;
  -moz-border-right-colors: none;
  -moz-border-top-colors: none;
  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
  border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
  border-image: none;
  border-radius: 6px 6px 6px 6px;
  border-style: none solid solid none;
  border-width: medium 1px 1px medium;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
  color: #555555;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 1em;
  line-height: 1.4em;
  padding: 5px 8px;
  transition: background-color 0.2s ease 0s;
}


textarea:focus {
    background: none repeat scroll 0 0 #FFFFFF;
    outline-width: 0;
}

.btn-primary{
    display: inline-block;
    outline: 0;
    border: 0;
    cursor: pointer;
    background-color: white;
    border-radius: 4px;
    padding: 8px 16px;
    font-size: 16px;
    font-weight: 600;
    color: rgb(43, 108, 176);
    border: 1px solid rgb(66, 153, 225);
    line-height: 26px;
}

.nav-pills{
  width: 400px;
}

.nav-item{
  width: 50%;
}

.nav-pills .nav-link{
  font-weight: bold;
  padding-top: 13px;
  text-align: center;
  background: #343436;
  color: #fff;
  border-radius: 30px;
  height: 100px;

}
.nav-pills .nav-link.active{
  background: #fff;
  color: #000;
}
.tab-content{
  position: absolute;
  margin-top: -50px;
  width: 100%;
  height: 100%;
  background: #fff;
  color: #000;
  border-radius: 10px;
  z-index: 1000;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
  padding: 30px;
  margin-bottom: 10px;
}

.button-container {
    text-align: right;
}
.card > div {
    position: relative;
}


.btn-close {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
}
/*.tab-content button{*/
/*  border-radius: 15px;*/
/*  width: 100px;*/
/*  margin: 0 auto;*/
/*  float: right;*/
/*}

